refactoring css to be smaller

--- a/index.html
+++ b/index.html
@@ -23,31 +23,25 @@
 
 <body>
   <div class="page d-flex">
-    <aside class=" p-10 shrink-0">
+    <aside class="p-10 shrink-0">
       <h3 class="p-relative txt-c">Elzero</h3>
-      <ul>
+      <ul class="mt-40">
         <li>
           <a href="#" class="active d-flex align-center rad-6 c-black p-8 fs-14">
             <i class="fa-solid fa-square-poll-vertical fa-fw"></i>
-            <span class="hide-mobile">
-              Dashboard
-            </span>
+            <span class="hide-mobile"> Dashboard </span>
           </a>
         </li>
         <li>
           <a href="pages/settings.html" class="d-flex align-center rad-6 c-black p-8 fs-14">
             <i class="fa-solid fa-gear fa-fw"></i>
-            <span class="hide-mobile">
-              Settings
-            </span>
+            <span class="hide-mobile"> Settings </span>
           </a>
         </li>
         <li>
           <a href="pages/profile.html" class="d-flex align-center rad-6 c-black p-8 fs-14">
             <i class="fa-solid fa-user fa-fw"></i>
-            <span class="hide-mobile">
-              Profile
-            </span>
+            <span class="hide-mobile"> Profile </span>
           </a>
         </li>
         <li>
@@ -98,12 +92,12 @@
         <h1 class="main-title">Dashboard</h1>
         <div class="main-wrapper mt-30 d-grid">
           <div class="welcome bg-white rad-10 txt-c-mobile">
-            <div class="head bg-eee d-flex justify-between   ">
+            <div class="head bg-eee d-flex justify-between">
               <div class="text p-10">
                 <h2 class="mb-5">Welcome</h2>
                 <span class="c-gray">Elzero</span>
               </div>
-              <img src="images/welcome.png" alt="" class="hide-mobile" />
+              <img src="images/welcome.png" alt="" class="hide-mobile p-relative" />
             </div>
             <img src="images/avatar.png" alt="" class="rad-circle" />
             <div class="body pt-20 pb-20 d-flex align-center d-block-mobile txt-c">
@@ -150,7 +144,7 @@
                   <span class="d-block c-gray mb-5">Money</span>
                   <span class="d-block fs-18 fw-b mb-15">$20.000</span>
                   <div class="progress blue">
-                    <span style="width:80%" class="d-block blue p-relative">
+                    <span style="width: 80%" class="d-block blue p-relative">
                       <span class="blue p-absolute">80%</span>
                     </span>
                   </div>
@@ -164,7 +158,7 @@
                   <span class="d-block c-gray mb-5">Projects</span>
                   <span class="d-block fs-18 fw-b mb-15">24</span>
                   <div class="progress orange">
-                    <span style="width:45%" class="d-block orange p-relative">
+                    <span style="width: 45%" class="d-block orange p-relative">
                       <span class="orange p-absolute">45%</span>
                     </span>
                   </div>
@@ -178,7 +172,7 @@
                   <span class="d-block c-gray mb-5">Team</span>
                   <span class="d-block fs-18 fw-b mb-15">12</span>
                   <div class="progress green">
-                    <span style="width:60%" class="d-block green p-relative">
+                    <span style="width: 60%" class="d-block green p-relative">
                       <span class="green p-absolute">60%</span>
                     </span>
                   </div>
@@ -191,13 +185,13 @@
               <h2 class="mb-5">Tickets Statistics</h2>
               <span class="c-gray">Everything About Support Tickets</span>
             </div>
-            <div class="stat-content  d-flex flex-wrap">
-              <div class="stat-item  rad-6 txt-c mb-15">
+            <div class="stat-content d-flex flex-wrap">
+              <div class="stat-item rad-6 txt-c mb-15">
                 <i class="fa-regular fa-rectangle-list fa-2x list-icon"></i>
                 <span class="d-block fs-26 fw-b mt-10 mb-10">2500</span>
                 <span class="d-block c-gray fs-14">Total</span>
               </div>
-              <div class="stat-item  rad-6 txt-c mb-15">
+              <div class="stat-item rad-6 txt-c mb-15">
                 <i class="fa-solid fa-spinner fa-2x pending-icon"></i>
                 <span class="d-block fs-26 fw-b mt-10 mb-10">500</span>
                 <span class="d-block c-gray fs-14">Pending</span>
@@ -207,7 +201,7 @@
                 <span class="d-block fs-26 fw-b mt-10 mb-10">1900</span>
                 <span class="d-block c-gray fs-14">Closed</span>
               </div>
-              <div class="stat-item  rad-6 txt-c mb-15">
+              <div class="stat-item rad-6 txt-c mb-15">
                 <i class="fa-regular fa-rectangle-xmark fa-2x delete-icon"></i>
                 <span class="d-block fs-26 fw-b mt-10 mb-10">100</span>
                 <span class="d-block c-gray fs-14">Deleted</span>
@@ -218,57 +212,53 @@
             <div class="mb-20">
               <h2 class="">Latest News</h2>
             </div>
-            <div class="news-item center-flex gap-10 mb-20 ">
+            <div class="news-item center-flex gap-10 mb-20">
               <div class="image rad-6 overflow-h fs-0">
                 <img src="images/news-01.png" alt="" />
               </div>
-              <div class="news-text between-flex grow-1 ">
+              <div class="news-text between-flex grow-1">
                 <div>
                   <h3 class="mb-3 news-title">Created SASS Section</h3>
                   <span class="c-gray">New SASS Examples &amp; Tutorials</span>
                 </div>
                 <span class="bg-eee p-5 rad-6 fs-12">3 Day Ago</span>
               </div>
-
             </div>
-            <div class="news-item center-flex gap-10 mb-20 ">
+            <div class="news-item center-flex gap-10 mb-20">
               <div class="image rad-6 overflow-h fs-0">
                 <img src="images/news-02.png" alt="" />
               </div>
-              <div class="news-text between-flex grow-1 ">
+              <div class="news-text between-flex grow-1">
                 <div>
                   <h3 class="mb-3 news-title">Changed The Design</h3>
                   <span class="c-gray">A Brand New Website Design</span>
                 </div>
                 <span class="bg-eee p-5 rad-6 fs-12">5 Day Ago</span>
               </div>
-
             </div>
-            <div class="news-item center-flex gap-10 mb-20 ">
+            <div class="news-item center-flex gap-10 mb-20">
               <div class="image rad-6 overflow-h fs-0">
                 <img src="images/news-03.png" alt="" />
               </div>
-              <div class="news-text between-flex grow-1 ">
+              <div class="news-text between-flex grow-1">
                 <div>
                   <h3 class="mb-3 news-title">Team Increased</h3>
                   <span class="c-gray">3 Developers Joined The Team</span>
                 </div>
                 <span class="bg-eee p-5 rad-6 fs-12">7 Day Ago</span>
               </div>
-
             </div>
-            <div class="news-item center-flex gap-10 mb-20 ">
+            <div class="news-item center-flex gap-10 mb-20">
               <div class="image rad-6 overflow-h fs-0">
                 <img src="images/news-04.png" alt="" />
               </div>
-              <div class="news-text between-flex grow-1 ">
+              <div class="news-text between-flex grow-1">
                 <div>
                   <h3 class="mb-3 news-title">Added Payment Gateway</h3>
                   <span class="c-gray">Many New Payment Gateways Added</span>
                 </div>
                 <span class="bg-eee p-5 rad-6 fs-12">9 Day Ago</span>
               </div>
-
             </div>
           </div>
           <div class="latest-tasks bg-white rad-10 p-10">
@@ -276,28 +266,36 @@
             <div class="task between-flex mb-15 pb-20">
               <div class="task-text grow-1">
                 <h3 class="fs-16 mb-5">Record One New Video</h3>
-                <p class="c-gray fs-14 m-0">Record Python Create Exe Project</p>
+                <p class="c-gray fs-14 m-0">
+                  Record Python Create Exe Project
+                </p>
               </div>
               <i class="fa-regular fa-trash-can fa-lg recyle-icon c-pointer"></i>
             </div>
             <div class="task between-flex mb-15 pb-20">
               <div class="task-text grow-1">
                 <h3 class="fs-16 mb-5">Write Article</h3>
-                <p class="c-gray fs-14 m-0">Write Low Level Vs High Level Languages</p>
+                <p class="c-gray fs-14 m-0">
+                  Write Low Level Vs High Level Languages
+                </p>
               </div>
               <i class="fa-regular fa-trash-can fa-lg recyle-icon c-pointer"></i>
             </div>
             <div class="task between-flex mb-15 pb-20">
               <div class="task-text grow-1">
                 <h3 class="fs-16 mb-5">Finish Project</h3>
-                <p class="c-gray fs-14 m-0">Publish Academy Programming Project</p>
+                <p class="c-gray fs-14 m-0">
+                  Publish Academy Programming Project
+                </p>
               </div>
               <i class="fa-regular fa-trash-can fa-lg recyle-icon c-pointer"></i>
             </div>
             <div class="task between-flex mb-15 pb-20 done">
               <div class="task-text grow-1">
                 <h3 class="fs-16 mb-5">Attend The Meeting</h3>
-                <p class="c-gray fs-14 m-0">Attend The Project Business Analysis Meeting</p>
+                <p class="c-gray fs-14 m-0">
+                  Attend The Project Business Analysis Meeting
+                </p>
               </div>
               <i class="fa-regular fa-trash-can fa-lg recyle-icon"></i>
             </div>
@@ -409,10 +407,18 @@
             <h2 class="mb-20">Last Project Progress</h2>
             <ul class="last-project-list p-relative">
               <li class="done d-flex align-center mt-25">Got The Project</li>
-              <li class="done d-flex align-center mt-25">Started The Project</li>
-              <li class="done d-flex align-center mt-25">The Project About To Finish</li>
-              <li class="current d-flex align-center mt-25">Test The Project</li>
-              <li class="d-flex align-center mt-25">Finish The Project And Get Money</li>
+              <li class="done d-flex align-center mt-25">
+                Started The Project
+              </li>
+              <li class="done d-flex align-center mt-25">
+                The Project About To Finish
+              </li>
+              <li class="current d-flex align-center mt-25">
+                Test The Project
+              </li>
+              <li class="d-flex align-center mt-25">
+                Finish The Project And Get Money
+              </li>
             </ul>
             <img src="images/project.png" class="p-absolute hide-mobile" alt="" />
           </div>
@@ -459,8 +465,9 @@
               </div>
             </div>
             <p class="mt-20 pt-20 pb-20 mb-20 fw-500 txt-c-mobile">
-              You Can Fool All Of The People Some Of The Time, And Some Of The People All of The Time, But You Can't
-              Fool All Of The People All Of The Time.
+              You Can Fool All Of The People Some Of The Time, And Some Of The
+              People All of The Time, But You Can't Fool All Of The People All
+              Of The Time.
             </p>
             <div class="reacts between-flex">
               <span class="c-gray">
