--- a/pages/profile.html
+++ b/pages/profile.html
@@ -25,7 +25,7 @@
   <div class="page d-flex">
     <aside class=" p-10 shrink-0">
       <h3 class="p-relative txt-c">Elzero</h3>
-      <ul>
+      <ul class="mt-40">
         <li>
           <a href="../index.html" class="d-flex align-center rad-6 c-black p-8 fs-14">
             <i class="fa-solid fa-square-poll-vertical fa-fw"></i>
@@ -101,8 +101,8 @@
             <img src="../images/avatar.png" alt="" class="rad-circle" />
             <h3 class="fs-16 mt-10 mb-10">Osama Elzero</h3>
             <span class="c-gray fs-14 fw-500">Level 20</span>
-            <div class="progress bg-eee mt-15 rad-6">
-              <span style="width:80%;" class="bg-blue"></span>
+            <div class="progress bg-eee mt-15 rad-6 p-relative mlr-auto">
+              <span style="width:80%;" class="bg-blue p-absolute"></span>
             </div>
             <div class="stars d-flex justify-center gap-5 mb-15 mt-15">
               <i class="fa-solid fa-star c-orange fs-12"></i>
@@ -130,7 +130,7 @@
               </div>
               <label>
                 <input type="checkbox" class="toggle-checkbox" checked />
-                <div class="toggle-switch"></div>
+                <div class="toggle-switch p-relative"></div>
               </label>
             </div>
             <div class="info-row d-flex align-center p-15 flex-wrap gap-10">
@@ -149,7 +149,7 @@
               </div>
               <label>
                 <input type="checkbox" class="toggle-checkbox" />
-                <div class="toggle-switch"></div>
+                <div class="toggle-switch p-relative"></div>
               </label>
             </div>
             <div class="info-row d-flex align-center p-15 flex-wrap gap-10">
@@ -187,7 +187,7 @@
               </div>
               <label>
                 <input type="checkbox" class="toggle-checkbox" />
-                <div class="toggle-switch"></div>
+                <div class="toggle-switch p-relative"></div>
               </label>
             </div>
           </div>
