--- a/pages/settings.html
+++ b/pages/settings.html
@@ -25,7 +25,7 @@
   <div class="page d-flex">
     <aside class=" p-10 shrink-0">
       <h3 class="p-relative txt-c">Elzero</h3>
-      <ul>
+      <ul class="mt-40">
         <li>
           <a href="../index.html" class=" d-flex align-center rad-6 c-black p-8 fs-14">
             <i class="fa-solid fa-square-poll-vertical fa-fw"></i>
@@ -109,7 +109,7 @@
               </div>
               <label>
                 <input type="checkbox" class="toggle-checkbox" checked />
-                <div class="toggle-switch"></div>
+                <div class="toggle-switch p-relative"></div>
               </label>
             </div>
             <textarea class="close-message w-full p-10 d-block caret-color-blue"
@@ -156,7 +156,7 @@
               </div>
               <label>
                 <input type="checkbox" class="toggle-checkbox" checked />
-                <div class="toggle-switch"></div>
+                <div class="toggle-switch p-relative"></div>
               </label>
             </div>
             <div class="between-flex">
@@ -197,27 +197,27 @@
             </div>
             <div class="control-box mb-20 pl-5">
               <input type="checkbox" name="" id="one" />
-              <label for="one">Quick Draft</label>
+              <label for="one" class="p-relative">Quick Draft</label>
             </div>
             <div class="control-box mb-20 pl-5">
               <input type="checkbox" name="" id="two" checked />
-              <label for="two">Yearly Targets</label>
+              <label for="two" class="p-relative">Yearly Targets</label>
             </div>
             <div class="control-box mb-20 pl-5">
               <input type="checkbox" name="" id="three" checked />
-              <label for="three">Tickets Statistics</label>
+              <label for="three" class="p-relative">Tickets Statistics</label>
             </div>
             <div class="control-box mb-20 pl-5">
               <input type="checkbox" name="" id="four" checked />
-              <label for="four">Latest News</label>
+              <label for="four" class="p-relative">Latest News</label>
             </div>
             <div class="control-box mb-20 pl-5">
               <input type="checkbox" name="" id="five" checked />
-              <label for="five">Latest Tasks</label>
+              <label for="five" class="p-relative">Latest Tasks</label>
             </div>
             <div class="control-box pl-5">
               <input type="checkbox" name="" id="six" />
-              <label for="six">Top Search Items</label>
+              <label for="six" class="p-relative">Top Search Items</label>
             </div>
           </div>
           <div class="backup-manager bg-white p-15 rad-10">
@@ -227,15 +227,15 @@
             </div>
             <div class="radio-box mb-15 pl-5">
               <input type="radio" name="backup-time" id="option1" />
-              <label for="option1" class="fw-500">Daily</label>
+              <label for="option1" class="fw-500 p-relative">Daily</label>
             </div>
             <div class="radio-box mb-15 pl-5">
               <input type="radio" name="backup-time" id="option2" checked />
-              <label for="option2" class="fw-500">Weekly</label>
+              <label for="option2" class="fw-500 p-relative">Weekly</label>
             </div>
             <div class="radio-box mb-30 pl-5 pb-20 bb-eee">
               <input type="radio" name="backup-time" id="option3" />
-              <label for="option3" class="fw-500">Monthly</label>
+              <label for="option3" class="fw-500 p-relative">Monthly</label>
             </div>
             <div class="backup-location-box d-flex align-center txt-c gap-15">
               <div class="w-full dasq">
