--- a/pages/plans.html
+++ b/pages/plans.html
@@ -25,7 +25,7 @@
   <div class="page d-flex">
     <aside class=" p-10 shrink-0">
       <h3 class="p-relative txt-c">Elzero</h3>
-      <ul>
+      <ul class="mt-40">
         <li>
           <a href="../index.html" class=" d-flex align-center rad-6 c-black p-8 fs-14">
             <i class="fa-solid fa-square-poll-vertical fa-fw"></i>
