fixed toggle switch in profile page

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -168,7 +168,7 @@
               </div>
               <label>
                 <input type="checkbox" class="toggle-checkbox" checked />
-                <div class="toggle-switch"></div>
+                <div class="toggle-switch p-relative"></div>
               </label>
             </div>
             <div class="info-row d-flex align-center p-15 flex-wrap gap-10">
